--- a/interfacesPersistence/pom.xml
+++ b/interfacesPersistence/pom.xml
@@ -8,10 +8,10 @@
   </parent>
 
   <groupId>ar.edu.itba.paw</groupId>
-  <artifactId>interfaces</artifactId>
+  <artifactId>interfacesPersistence</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>interfaces</name>
+  <name>interfacesPersistence</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
