--- a/interfacesServices/pom.xml
+++ b/interfacesServices/pom.xml
@@ -8,10 +8,10 @@
   </parent>
 
   <groupId>ar.edu.itba.paw</groupId>
-  <artifactId>persistence</artifactId>
+  <artifactId>interfacesServices</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>persistence</name>
+  <name>interfacesServices</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -19,11 +19,6 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>models</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>interfacesPersistence</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
