--- a/pom.xml
+++ b/pom.xml
@@ -1,104 +1,99 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+    
   <modelVersion>4.0.0</modelVersion>
+    
   <groupId>ar.edu.itba.paw</groupId>
+    
   <artifactId>paw-2023a-08</artifactId>
+    
   <version>1.0-SNAPSHOT</version>
+    
   <packaging>pom</packaging>
+    
   <name>paw-2023a-08</name>
-
+    
   <properties>
+        
     <spring.verison>4.2.5.RELEASE</spring.verison>
+        
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        
     <maven.compiler.source>1.8</maven.compiler.source>
+        
     <maven.compiler.target>1.8</maven.compiler.target>
+      
   </properties>
-
-
+    
   <dependencyManagement>
+        
     <dependencies>
+            
       <dependency>
+                
         <groupId>org.springframework</groupId>
+                
         <artifactId>spring-webmvc</artifactId>
+                
         <version>${spring.verison}</version>
+              
       </dependency>
+            
       <dependency>
+                
         <groupId>org.springframework</groupId>
+                
         <artifactId>spring-context</artifactId>
+                
         <version>${spring.verison}</version>
+              
       </dependency>
+            
       <dependency>
+                
         <groupId>javax.servlet</groupId>
+                
         <artifactId>servlet-api</artifactId>
+                
         <version>2.5</version>
+                
         <scope>provided</scope>
+              
       </dependency>
-                              
-      
-      
-      
+            
       <dependency>
-                                        
-        
-        
-        
+                
         <groupId>javax.servlet</groupId>
-                                        
-        
-        
-        
+                
         <artifactId>jstl</artifactId>
-                                        
-        
-        
-        
+                
         <version>1.2</version>
-                                      
-      
-      
-      
+              
       </dependency>
-                            
-    
-    
-    
-    </dependencies>
-                  
-  
-  
-  
-  </dependencyManagement>
           
-  
-  
+    </dependencies>
+      
+  </dependencyManagement>
+            
+
   
   <modules>
-                    
-    
-    
-    
+        
     <module>webapp</module>
-                    
-    
-    
-    
+        
     <module>models</module>
-                  
-    
-    
-    
-    <module>interfaces</module>
-              
-    
-    
+        
+    <module>interfacesServices</module>
+        
     <module>persistence</module>
-          
-    
+        
     <module>services</module>
+        
+    <module>interfacesPersistence</module>
       
   </modules>
-        
+          
+
 
 
 
