--- a/services/pom.xml
+++ b/services/pom.xml
@@ -27,7 +27,7 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>interfaces</artifactId>
+      <artifactId>interfacesServices</artifactId>
       <version>${project.version}</version>
     </dependency>
 
