--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -37,7 +37,7 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>interfaces</artifactId>
+      <artifactId>interfacesServices</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
