--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
     <maven.compiler.source>1.8</maven.compiler.source>
         
     <maven.compiler.target>1.8</maven.compiler.target>
+    <javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
+    <org.hibernate.validator>5.4.3.Final</org.hibernate.validator>
       
   </properties>
     
@@ -64,15 +66,26 @@
       <dependency>
                 
         <groupId>javax.servlet</groupId>
-                
+
         <artifactId>jstl</artifactId>
-                
+
         <version>1.2</version>
-              
+
+      </dependency>
+
+      <dependency>
+        <groupId>javax.validation</groupId>
+        <artifactId>validation-api</artifactId>
+        <version>${javax.validation-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-validator</artifactId>
+        <version>${org.hibernate.validator}</version>
       </dependency>
 
     </dependencies>
-      
+
   </dependencyManagement>
             
 
