--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -22,6 +22,14 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.postgresql</groupId>-->
+<!--      <artifactId>postgresql</artifactId> -->
+<!--    </dependency>-->
+    <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>interfacesPersistence</artifactId>
       <version>${project.version}</version>
