--- a/pom.xml
+++ b/pom.xml
@@ -2,77 +2,55 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     
   <modelVersion>4.0.0</modelVersion>
-    
   <groupId>ar.edu.itba.paw</groupId>
-    
   <artifactId>paw-2023a-08</artifactId>
-    
   <version>1.0-SNAPSHOT</version>
-    
   <packaging>pom</packaging>
-    
   <name>paw-2023a-08</name>
     
   <properties>
-        
-    <spring.verison>4.2.5.RELEASE</spring.verison>
-        
+    <spring.version>4.2.5.RELEASE</spring.version>
+    <org.postgresql.version>42.2.5</org.postgresql.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        
     <maven.compiler.source>1.8</maven.compiler.source>
-        
     <maven.compiler.target>1.8</maven.compiler.target>
     <javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
     <org.hibernate.validator>5.4.3.Final</org.hibernate.validator>
-      
   </properties>
-    
+
   <dependencyManagement>
-        
     <dependencies>
-            
       <dependency>
-                
         <groupId>org.springframework</groupId>
-                
         <artifactId>spring-webmvc</artifactId>
-                
-        <version>${spring.verison}</version>
-              
+        <version>${spring.version}</version>
       </dependency>
-            
       <dependency>
-                
         <groupId>org.springframework</groupId>
-                
         <artifactId>spring-context</artifactId>
-                
-        <version>${spring.verison}</version>
-              
+        <version>${spring.version}</version>
       </dependency>
-            
       <dependency>
-                
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jdbc</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>${org.postgresql.version}</version>
+      </dependency>
+      <dependency>
         <groupId>javax.servlet</groupId>
-                
         <artifactId>servlet-api</artifactId>
-                
         <version>2.5</version>
-                
         <scope>provided</scope>
-              
       </dependency>
-            
       <dependency>
-                
         <groupId>javax.servlet</groupId>
-
         <artifactId>jstl</artifactId>
-
         <version>1.2</version>
-
       </dependency>
-
       <dependency>
         <groupId>javax.validation</groupId>
         <artifactId>validation-api</artifactId>
@@ -83,7 +61,6 @@
         <artifactId>hibernate-validator</artifactId>
         <version>${org.hibernate.validator}</version>
       </dependency>
-
     </dependencies>
 
   </dependencyManagement>
