--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -25,6 +25,10 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+    </dependency>
 <!--    <dependency>-->
 <!--      <groupId>org.postgresql</groupId>-->
 <!--      <artifactId>postgresql</artifactId> -->
