--- a/services/pom.xml
+++ b/services/pom.xml
@@ -30,6 +30,12 @@
       <artifactId>interfacesServices</artifactId>
       <version>${project.version}</version>
     </dependency>
+      <dependency>
+          <groupId>ar.edu.itba.paw</groupId>
+          <artifactId>interfacesPersistence</artifactId>
+          <version>1.0-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
 
   </dependencies>
 
