--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
     <org.hibernate.validator>5.4.3.Final</org.hibernate.validator>
+    <javax.mail.version>1.6.2</javax.mail.version>
   </properties>
 
   <dependencyManagement>
@@ -60,6 +61,16 @@
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-validator</artifactId>
         <version>${org.hibernate.validator}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.mail</groupId>
+        <artifactId>javax.mail</artifactId>
+        <version>${javax.mail.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.mail</groupId>
+        <artifactId>javax.mail-api</artifactId>
+        <version>${javax.mail.version}</version>
       </dependency>
     </dependencies>
 
