--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -80,6 +80,18 @@
       <groupId>javax.mail</groupId>
       <artifactId>javax.mail-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
