--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -8,9 +8,11 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     <param-name>contextClass</param-name>
     <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
   </context-param>
+
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>ar.edu.itba.paw.webapp.config.WebConfig</param-value>
+    <param-value>ar.edu.itba.paw.webapp.config.WebConfig,
+      ar.edu.itba.paw.webapp.config.WebAuthConfig</param-value>
   </context-param>
 
   <servlet>
