--- a/services/pom.xml
+++ b/services/pom.xml
@@ -52,6 +52,10 @@
       <groupId>javax.mail</groupId>
       <artifactId>javax.mail-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+    </dependency>
 
   </dependencies>
 
