feat: added thymeleaf for email templates

--- a/interfacesServices/pom.xml
+++ b/interfacesServices/pom.xml
@@ -21,6 +21,14 @@
       <artifactId>models</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>javax.mail</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>javax.mail-api</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
