--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -80,6 +80,11 @@
       <groupId>javax.mail</groupId>
       <artifactId>javax.mail-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+      <version>2.3.3.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <build>
