--- a/services/pom.xml
+++ b/services/pom.xml
@@ -61,8 +61,10 @@
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
       <version>2.3.3.RELEASE</version>
     </dependency>
-
-
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+    </dependency>
   </dependencies>
 
 
