--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-URI=localhost:5433/paw
-USER=root
-PASS=root
+URI=localhost:5432/paw
+USER=postgres
+PASS=password
 
 KEY=cI9J2hRDm0ioUse8xQyo7eHBaZOJPHlpT8ZeaNXv4aabDfepPIUoy
 
