--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <logback.version>1.1.2</logback.version>
     <junit.version>4.13.2</junit.version>
     <logback-ext-spring.version>0.1.1</logback-ext-spring.version>
+    <maven-war-plugin.version>2.6</maven-war-plugin.version>
   </properties>
 
   <dependencyManagement>
@@ -167,8 +168,6 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-            
-
   
   <modules>
     <module>webapp</module>
@@ -178,9 +177,18 @@
     <module>services</module>
     <module>interfacesPersistence</module>
   </modules>
-          
 
-
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>${maven-war-plugin.version}</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 
 
 </project>
