--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,6 @@
     <javax.servlet.api.version>2.5</javax.servlet.api.version>
     <org.hibernate.validator>5.4.3.Final</org.hibernate.validator>
     <javax.mail.version>1.6.2</javax.mail.version>
-    <spring-boot-starter-thymeleaf-version>2.3.3.RELEASE</spring-boot-starter-thymeleaf-version>
     <mockito.version>2.25.1</mockito.version>
     <org.hsqldb.version>2.5.1</org.hsqldb.version>
     <slf4j.version>1.7.5</slf4j.version>
@@ -28,6 +27,7 @@
     <junit.version>4.13.2</junit.version>
     <logback-ext-spring.version>0.1.1</logback-ext-spring.version>
     <maven-war-plugin.version>2.6</maven-war-plugin.version>
+    <org.thymeleaf.version>3.0.11.RELEASE</org.thymeleaf.version>
   </properties>
 
   <dependencyManagement>
@@ -105,9 +105,14 @@
         <version>${javax.mail.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        <version>${spring-boot-starter-thymeleaf-version}</version>
+        <groupId>org.thymeleaf</groupId>
+        <artifactId>thymeleaf</artifactId>
+        <version>${org.thymeleaf.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.thymeleaf</groupId>
+        <artifactId>thymeleaf-spring4</artifactId>
+        <version>${org.thymeleaf.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
