--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -93,8 +93,12 @@
       <artifactId>spring-security-config</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+      <groupId>org.thymeleaf</groupId>
+      <artifactId>thymeleaf</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.thymeleaf</groupId>
+      <artifactId>thymeleaf-spring4</artifactId>
     </dependency>
 <!--    logging  -->
 <!--    si quiero loggear algo en otra parte me llevo solo esta primera dependencia-->
