--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <logback-ext-spring.version>0.1.1</logback-ext-spring.version>
     <maven-war-plugin.version>2.6</maven-war-plugin.version>
     <org.thymeleaf.version>3.0.11.RELEASE</org.thymeleaf.version>
+    <commons-fileupload.version>1.4</commons-fileupload.version>
   </properties>
 
   <dependencyManagement>
