ft: CityDao to hibernate

--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 URI=localhost:5433/paw
-USER=postgres
-PASS=password
+USER=root
+PASS=root
 
 KEY=cI9J2hRDm0ioUse8xQyo7eHBaZOJPHlpT8ZeaNXv4aabDfepPIUoy
 
