--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -15,28 +15,29 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
       ar.edu.itba.paw.webapp.config.WebAuthConfig</param-value>
   </context-param>
 
-  <servlet>
-    <servlet-name>dispatcher</servlet-name>
-
-    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class> <!-- Esto mismo lo que hace es decir que clase es la que va implementar el servet -->
-    <init-param>
-      <param-name>contextClass</param-name>
-      <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
-    </init-param>
-
-    <init-param>
-      <param-name>throwExceptionIfNoHandlerFound</param-name>
-      <param-value>true</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup> <!-- Esto mismo es que se instancia al lanzar el proyecto-->
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>dispatcher</servlet-name>
-    <url-pattern>/</url-pattern>
-  </servlet-mapping>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+
+  <filter>
+    <filter-name>jersey</filter-name>
+    <filter-class>org.glassfish.jersey.servlet.ServletContainer</filter-class>
+    <init-param>
+      <param-name>jersey.config.server.provider.packages</param-name>
+      <param-value>ar.edu.itba.paw.webapp.controller</param-value>
+    </init-param>
+    <!-- pass to next filter if Jersey/App returns 404 -->
+    <init-param>
+      <param-name>jersey.config.servlet.filter.forwardOn404</param-name>
+      <param-value>true</param-value>
+    </init-param>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>jersey</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
 
   <filter>
     <filter-name>springSecurityFilterChain</filter-name>
