--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "i18next-http-backend": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.5.0"
+    "react-i18next": "^13.5.0",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
