Chore: cleanup and comments

--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -92,6 +92,8 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     <filter-name>StaticCacheFilter</filter-name>
     <filter-class>ar.edu.itba.paw.webapp.config.StaticCacheFilter</filter-class>
   </filter>
+
+<!--  apuntar esto a mi front -->
   <filter-mapping>
     <filter-name>StaticCacheFilter</filter-name>
     <url-pattern>/static/*</url-pattern>
