--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <jersey.version>3.0-SNAPSHOT</jersey.version>
     <io.jwt.version>0.11.2</io.jwt.version>
     <javax.ws.rs.version>2.1</javax.ws.rs.version>
+    <frontend.plugin.version>1.12.1</frontend.plugin.version>
   </properties>
 
   <repositories>
@@ -352,6 +353,7 @@
   </dependencyManagement>
 
   <modules>
+    <module>Front</module>
     <module>webapp</module>
     <module>models</module>
     <module>interfacesServices</module>
@@ -363,6 +365,11 @@
   <build>
     <pluginManagement>
       <plugins>
+        <plugin>
+          <groupId>com.github.eirslett</groupId>
+          <artifactId>frontend-maven-plugin</artifactId>
+          <version>${frontend.plugin.version}</version>
+        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
