--- a/Front/package.json
+++ b/Front/package.json
@@ -1,6 +1,7 @@
 {
   "name": "paw-trucker-vite",
   "private": true,
+  "homepage": "/paw-2023a-08",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -12,6 +13,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@testing-library/jest-dom": "^6.4.1",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
