--- a/Front/pom.xml
+++ b/Front/pom.xml
@@ -20,6 +20,9 @@
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
+<!--                <configuration>-->
+<!--                    <workingDirectory>.</workingDirectory>-->
+<!--                </configuration>-->
                 <executions>
                     <execution>
                         <id>install node and npm</id>
@@ -49,6 +52,7 @@
                         <configuration>
                             <arguments>run build</arguments>
                         </configuration>
+<!--                        <phase>compile</phase>-->
                     </execution>
                 </executions>
             </plugin>
